name:                hamexpress
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/hamexpress#readme
license:             BSD3
license-file:        LICENSE
author:              Maurizio Di Pietro
maintainer:          dc1mdp@gmail.com
copyright:           2017 Maurizio Di Pietro
category:            Ham
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hamexpress
  hs-source-dirs:      src
  main-is:             hamexpress.hs
  default-language:    Haskell2010

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                  --     -optl=-static
                  --     -optl=-pthread

  other-modules:       Backbone
                     , Client
                     , HETypes
                     , Helpers
                     , Logo

  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , network
                     , MissingH
                     , stm
                     , containers
                     , DHT
                     , bytestring
                     , threads-supervisor
                     , random
                     , safe
                     , network-info
                     , retry

